--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
-/Archive
-/MyNotes
 /__pycache__
-/*.bat
+/Archive
+/BiblePlanOutput
 /kjv_chapter_files
-/create_play_list.py
-/psalm_readings.py
-*.m3u8
-daily_readings.txt
+/MyNotes
+/*.bat
 FPCR_Comprehensive_Psalter.py
