Move kjv_chapters from lib to downloads

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 /__pycache__
 /Archive
 /BiblePlanOutput
+/downloads/kjv_chapter_files
 /lib/fpcr_comprehensive_psalter.py
-/lib/kjv_chapter_files
 /lib/__pycache__
 /MyNotes
 /*.bat
