--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /__pycache__
 /Archive
+/BibleMetadata/ChapterWords
 /BiblePlanOutput
 /downloads/kjv_chapter_files
 /lib/fpcr_comprehensive_psalter.py
